--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en"  xmlns:th="http://www.thymeleaf.org" >
 <th:block th:replace="~{layout.html :: header}"></th:block>
 <div class="container">
-  <button type="button" class="btn btn-primary mt-4" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="create">
+  <button type="button" class="btn btn-primary mt-4 mb-4" onclick="showCreate()" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="create">
     Create Room
   </button>
   <!-- Modal -->
@@ -17,29 +17,13 @@
         <div class="modal-body">
           <form id="roomForm">
             <div class="row">
-              <div class="form-group col-6">
-                <label for="name">Name</label>
-                <input type="text" class="form-control" id="name" name="name" required>
+              <div id="formBody">
+
               </div>
-              <div class="form-group col-6">
-                <label for="type">Type</label>
-                <select class="multiselect-dropdown form-control select2-hidden-accessible" id="type" name="type">
-                  <option th:each="type : ${types}" th:value="${type.value}"
-                          th:text="${type.name}"/>
-                </select>
-              </div>
-              <div class="form-group col-6">
-                <label for="price">Price</label>
-                <input type="number" class="form-control" id="price" name="price">
-              </div>
-              <div class="form-group col-6">
-                <label for="description">Description</label>
-                <input type="text" class="form-control" id="description" name="description">
-              </div>
-              <div class="form-group col-6">
-                <label class="mt-3">Categories: </label>
+              <div class="form-group">
+                <label class="mt-3 form-label">Categories: </label>
                 <div class="form-check form-check-inline mt-3" th:each="category : ${categories}">
-                  <input class="form-check-input" type="checkbox" th:value="${category.value}" name="categories" />
+                  <input class="form-check-input" min="1" type="checkbox" th:value="${category.value}" name="categories" />
                   <label class="form-check-label"  th:text="${category.name}">  </label>
                 </div>
               </div>
@@ -59,220 +43,17 @@
       <table class="table">
         <thead>
         <tr>
-          <th>Project</th>
-          <th>Client</th>
-          <th>Users</th>
-          <th>Status</th>
+          <th>No.</th>
+          <th>Name</th>
+          <th>Description</th>
+          <th>Price</th>
+          <th>Type</th>
+          <th>Categories</th>
           <th>Actions</th>
         </tr>
         </thead>
-        <tbody class="table-border-bottom-0">
-        <tr>
-          <td><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>Angular Project</strong></td>
-          <td>Albert Cook</td>
-          <td>
-            <ul class="list-unstyled users-list m-0 avatar-group d-flex align-items-center">
-              <li
-                      data-bs-toggle="tooltip"
-                      data-popup="tooltip-custom"
-                      data-bs-placement="top"
-                      class="avatar avatar-xs pull-up"
-                      title="Lilian Fuller"
-              >
-                <img src="../assets/img/avatars/5.png" alt="Avatar" class="rounded-circle" />
-              </li>
-              <li
-                      data-bs-toggle="tooltip"
-                      data-popup="tooltip-custom"
-                      data-bs-placement="top"
-                      class="avatar avatar-xs pull-up"
-                      title="Sophia Wilkerson"
-              >
-                <img src="../assets/img/avatars/6.png" alt="Avatar" class="rounded-circle" />
-              </li>
-              <li
-                      data-bs-toggle="tooltip"
-                      data-popup="tooltip-custom"
-                      data-bs-placement="top"
-                      class="avatar avatar-xs pull-up"
-                      title="Christina Parker"
-              >
-                <img src="../assets/img/avatars/7.png" alt="Avatar" class="rounded-circle" />
-              </li>
-            </ul>
-          </td>
-          <td><span class="badge bg-label-primary me-1">Active</span></td>
-          <td>
-            <div class="dropdown">
-              <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                <i class="bx bx-dots-vertical-rounded"></i>
-              </button>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="javascript:void(0);"
-                ><i class="bx bx-edit-alt me-1"></i> Edit</a
-                >
-                <a class="dropdown-item" href="javascript:void(0);"
-                ><i class="bx bx-trash me-1"></i> Delete</a
-                >
-              </div>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td><i class="fab fa-react fa-lg text-info me-3"></i> <strong>React Project</strong></td>
-          <td>Barry Hunter</td>
-          <td>
-            <ul class="list-unstyled users-list m-0 avatar-group d-flex align-items-center">
-              <li
-                      data-bs-toggle="tooltip"
-                      data-popup="tooltip-custom"
-                      data-bs-placement="top"
-                      class="avatar avatar-xs pull-up"
-                      title="Lilian Fuller"
-              >
-                <img src="../assets/img/avatars/5.png" alt="Avatar" class="rounded-circle" />
-              </li>
-              <li
-                      data-bs-toggle="tooltip"
-                      data-popup="tooltip-custom"
-                      data-bs-placement="top"
-                      class="avatar avatar-xs pull-up"
-                      title="Sophia Wilkerson"
-              >
-                <img src="../assets/img/avatars/6.png" alt="Avatar" class="rounded-circle" />
-              </li>
-              <li
-                      data-bs-toggle="tooltip"
-                      data-popup="tooltip-custom"
-                      data-bs-placement="top"
-                      class="avatar avatar-xs pull-up"
-                      title="Christina Parker"
-              >
-                <img src="../assets/img/avatars/7.png" alt="Avatar" class="rounded-circle" />
-              </li>
-            </ul>
-          </td>
-          <td><span class="badge bg-label-success me-1">Completed</span></td>
-          <td>
-            <div class="dropdown">
-              <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                <i class="bx bx-dots-vertical-rounded"></i>
-              </button>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="javascript:void(0);"
-                ><i class="bx bx-edit-alt me-2"></i> Edit</a
-                >
-                <a class="dropdown-item" href="javascript:void(0);"
-                ><i class="bx bx-trash me-2"></i> Delete</a
-                >
-              </div>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td><i class="fab fa-vuejs fa-lg text-success me-3"></i> <strong>VueJs Project</strong></td>
-          <td>Trevor Baker</td>
-          <td>
-            <ul class="list-unstyled users-list m-0 avatar-group d-flex align-items-center">
-              <li
-                      data-bs-toggle="tooltip"
-                      data-popup="tooltip-custom"
-                      data-bs-placement="top"
-                      class="avatar avatar-xs pull-up"
-                      title="Lilian Fuller"
-              >
-                <img src="../assets/img/avatars/5.png" alt="Avatar" class="rounded-circle" />
-              </li>
-              <li
-                      data-bs-toggle="tooltip"
-                      data-popup="tooltip-custom"
-                      data-bs-placement="top"
-                      class="avatar avatar-xs pull-up"
-                      title="Sophia Wilkerson"
-              >
-                <img src="../assets/img/avatars/6.png" alt="Avatar" class="rounded-circle" />
-              </li>
-              <li
-                      data-bs-toggle="tooltip"
-                      data-popup="tooltip-custom"
-                      data-bs-placement="top"
-                      class="avatar avatar-xs pull-up"
-                      title="Christina Parker"
-              >
-                <img src="../assets/img/avatars/7.png" alt="Avatar" class="rounded-circle" />
-              </li>
-            </ul>
-          </td>
-          <td><span class="badge bg-label-info me-1">Scheduled</span></td>
-          <td>
-            <div class="dropdown">
-              <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                <i class="bx bx-dots-vertical-rounded"></i>
-              </button>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="javascript:void(0);"
-                ><i class="bx bx-edit-alt me-2"></i> Edit</a
-                >
-                <a class="dropdown-item" href="javascript:void(0);"
-                ><i class="bx bx-trash me-2"></i> Delete</a
-                >
-              </div>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <i class="fab fa-bootstrap fa-lg text-primary me-3"></i> <strong>Bootstrap Project</strong>
-          </td>
-          <td>Jerry Milton</td>
-          <td>
-            <ul class="list-unstyled users-list m-0 avatar-group d-flex align-items-center">
-              <li
-                      data-bs-toggle="tooltip"
-                      data-popup="tooltip-custom"
-                      data-bs-placement="top"
-                      class="avatar avatar-xs pull-up"
-                      title="Lilian Fuller"
-              >
-                <img src="../assets/img/avatars/5.png" alt="Avatar" class="rounded-circle" />
-              </li>
-              <li
-                      data-bs-toggle="tooltip"
-                      data-popup="tooltip-custom"
-                      data-bs-placement="top"
-                      class="avatar avatar-xs pull-up"
-                      title="Sophia Wilkerson"
-              >
-                <img src="../assets/img/avatars/6.png" alt="Avatar" class="rounded-circle" />
-              </li>
-              <li
-                      data-bs-toggle="tooltip"
-                      data-popup="tooltip-custom"
-                      data-bs-placement="top"
-                      class="avatar avatar-xs pull-up"
-                      title="Christina Parker"
-              >
-                <img src="../assets/img/avatars/7.png" alt="Avatar" class="rounded-circle" />
-              </li>
-            </ul>
-          </td>
-          <td><span class="badge bg-label-warning me-1">Pending</span></td>
-          <td>
-            <div class="dropdown">
-              <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                <i class="bx bx-dots-vertical-rounded"></i>
-              </button>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="javascript:void(0);"
-                ><i class="bx bx-edit-alt me-2"></i> Edit</a
-                >
-                <a class="dropdown-item" href="javascript:void(0);"
-                ><i class="bx bx-trash me-2"></i> Delete</a
-                >
-              </div>
-            </div>
-          </td>
-        </tr>
+        <tbody class="table-border-bottom-0" id="tBody">
+
         </tbody>
       </table>
     </div>
