--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -57,6 +57,7 @@
     <link rel="stylesheet" href="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
 
     <link rel="stylesheet" href="../assets/vendor/libs/apex-charts/apex-charts.css" />
+    <link rel="stylesheet" href="../assets/mycss/base.css">
 
     <!-- Page CSS -->
 
@@ -657,6 +658,7 @@
 
        <!-- Place this tag in your head or just before your close body tag. -->
        <script async defer src="https://buttons.github.io/buttons.js"></script>
+       <script src="../assets/myjs/base.js"></script>
        </body>
      </th:block>   <!-- / Content -->
 
