--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
   <button type="button" class="btn btn-primary mt-4 mb-4" onclick="showCreate()" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="create">
     Create Room
   </button>
+
   <!-- Modal -->
   <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
        aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -21,11 +22,17 @@
 
               </div>
               <div class="form-group">
-                <label class="mt-3 form-label">Categories: </label>
+                <label for="category" class="mt-3 form-label">Categories: </label>
                 <div class="form-check form-check-inline mt-3" th:each="category : ${categories}">
-                  <input class="form-check-input" min="1" type="checkbox" th:value="${category.value}" name="categories" />
+                  <input id="category" class="form-check-input" min="1" type="checkbox" th:value="${category.value}" name="categories" />
                   <label class="form-check-label"  th:text="${category.name}">  </label>
                 </div>
+              </div>
+              <div>
+                  <label id="images" for="file">
+                    <img class="avatar-preview" src="../assets/img/avatars/1.png" />
+                    <input id="file" class="d-none" type="file" multiple="multiple"  onchange="previewImage(event)">
+                  </label>
               </div>
             </div>
             <div class="modal-footer">
